--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,10 @@ body,
   height: 100%;
 }
 
+* {
+  font-family: "Roboto Condensed";
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
